# preft

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: app.rs  dashboard.rs  db.rs  encryption.rs  encryption_config.rs  lib.rs  logging.rs  main.rs  models.rs  reporting.rs  settings.rs  ui.rs  utils.rs
src/db/: migrations.rs
src/ui/: backup_dialog.rs  category_editor.rs  category_flows.rs  dashboard.rs  flow_editor.rs  main_panel.rs  mod.rs  password_dialog.rs  report_dialog.rs
tests/: db_backup_restore.rs  db_crud.rs  db_dirty_tracking.rs  db_smoke.rs
