[package]
name = "preft"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.24.1", features = ["default"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
dirs = "5.0"
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef", "winbase"] }
printpdf = "0.4.0"
rfd = "0.12.0"
log = "0.4.21"
env_logger = "0.11.1" 